// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentCard stories snapshot > CustomClassNames story renders and matches snapshot 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui relative h-full overflow-hidden ring-secondary/40 bg-muted/50 card-override-sentinel"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="relative aspect-[4/3] overflow-hidden bg-secondary/20"
      >
        <img
          alt="Custom class names"
          class="w-full h-full object-cover"
          loading="lazy"
          src="https://via.placeholder.com/400x300"
          style="object-position: 50% 50%;"
        />
        <div
          class="absolute inset-0 flex flex-col justify-end p-6 md:p-8 footer-override-sentinel"
        >
          <div
            class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent -z-10"
          />
          <div
            class="relative z-10"
          >
            <div
              class="flex-1 flex flex-col justify-end description-override-sentinel"
            >
              <p
                class="text-sm font-normal leading-5 text-muted mb-2 whitespace-pre-line"
              >
                This example applies custom classes to the footer, description, and button.
              </p>
              <h3
                class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] text-card mb-4"
              >
                Custom Class Names
              </h3>
            </div>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-fit text-sm font-medium leading-5 text-primary-foreground button-override-sentinel"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/details"
            >
              View Details
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui relative h-full overflow-hidden ring-secondary/40 bg-muted/50"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="relative aspect-[4/3] overflow-hidden bg-secondary/20"
      >
        <img
          alt="Featured Product"
          class="w-full h-full object-cover"
          loading="lazy"
          src="https://via.placeholder.com/400x300"
          style="object-position: 50% 50%;"
        />
        <div
          class="absolute inset-0 flex flex-col justify-end p-6 md:p-8"
        >
          <div
            class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent -z-10"
          />
          <div
            class="relative z-10"
          >
            <div
              class="flex-1 flex flex-col justify-end"
            >
              <p
                class="text-sm font-normal leading-5 text-muted mb-2 whitespace-pre-line"
              >
                Discover our latest collection of premium products designed for modern living.
              </p>
              <h3
                class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] text-card mb-4"
              >
                Featured Product
              </h3>
            </div>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-fit text-sm font-medium leading-5 text-primary-foreground"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/category/featured"
            >
              Shop Now
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard stories snapshot > LongCopy story renders and matches snapshot 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui relative h-full overflow-hidden ring-secondary/40 bg-muted/50"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="relative aspect-[4/3] overflow-hidden bg-secondary/20"
      >
        <img
          alt="Long-copy editorial card"
          class="w-full h-full object-cover"
          loading="lazy"
          src="https://via.placeholder.com/400x300"
          style="object-position: 50% 50%;"
        />
        <div
          class="absolute inset-0 flex flex-col justify-end p-6 md:p-8"
        >
          <div
            class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent -z-10"
          />
          <div
            class="relative z-10"
          >
            <div
              class="flex-1 flex flex-col justify-end"
            >
              <p
                class="text-sm font-normal leading-5 text-muted mb-2 whitespace-pre-line"
              >
                Every piece in this collection has been selected by our editorial team for its provenance, craftsmanship, and material story. From hand-loomed textiles to single-origin ceramics, our partners share a commitment to fair-wage manufacturing, low-impact materials, and durable design that outlasts trend cycles. Browse the full assortment to find pieces that match your aesthetic and your values.
              </p>
              <h3
                class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] text-card mb-4"
              >
                Discover the Most Comprehensive Curated Collection of Sustainable, Ethically Sourced, Premium-Quality Goods Designed for the Modern Conscious Consumer
              </h3>
            </div>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-fit text-sm font-medium leading-5 text-primary-foreground"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/category/editorial"
            >
              Browse the Full Editorial Collection
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard stories snapshot > NoBackground story renders and matches snapshot 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui relative h-full overflow-hidden bg-transparent border-0"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="relative aspect-[4/3] overflow-hidden bg-secondary/20"
      >
        <img
          alt="Transparent card"
          class="w-full h-full object-cover"
          loading="lazy"
          src="https://via.placeholder.com/400x300"
          style="object-position: 50% 50%;"
        />
        <div
          class="absolute inset-0 flex flex-col justify-end p-6 md:p-8"
        >
          <div
            class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent -z-10"
          />
          <div
            class="relative z-10"
          >
            <div
              class="flex-1 flex flex-col justify-end"
            >
              <p
                class="text-sm font-normal leading-5 text-muted mb-2 whitespace-pre-line"
              >
                This card has no background or border for a cleaner look.
              </p>
              <h3
                class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] text-card mb-4"
              >
                Transparent Card
              </h3>
            </div>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-fit text-sm font-medium leading-5 text-primary-foreground"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/explore"
            >
              Explore
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard stories snapshot > Playground story renders and matches snapshot 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui relative h-full overflow-hidden ring-secondary/40 bg-muted/50"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="relative aspect-[4/3] overflow-hidden bg-secondary/20"
      >
        <img
          alt="Featured Product"
          class="w-full h-full object-cover"
          loading="lazy"
          src="https://via.placeholder.com/400x300"
          style="object-position: 50% 50%;"
        />
        <div
          class="absolute inset-0 flex flex-col justify-end p-6 md:p-8"
        >
          <div
            class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent -z-10"
          />
          <div
            class="relative z-10"
          >
            <div
              class="flex-1 flex flex-col justify-end"
            >
              <p
                class="text-sm font-normal leading-5 text-muted mb-2 whitespace-pre-line"
              >
                Discover our latest collection of premium products designed for modern living.
              </p>
              <h3
                class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] text-card mb-4"
              >
                Featured Product
              </h3>
            </div>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-fit text-sm font-medium leading-5 text-primary-foreground"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/category/featured"
            >
              Shop Now
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard stories snapshot > WithoutButton story renders and matches snapshot 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui relative h-full overflow-hidden ring-secondary/40 bg-muted/50"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="relative aspect-[4/3] overflow-hidden bg-secondary/20"
      >
        <img
          alt="Text only card"
          class="w-full h-full object-cover"
          loading="lazy"
          src="https://via.placeholder.com/400x300"
          style="object-position: 50% 50%;"
        />
        <div
          class="absolute inset-0 flex flex-col justify-end p-6 md:p-8"
        >
          <div
            class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent -z-10"
          />
          <div
            class="relative z-10"
          >
            <div
              class="flex-1 flex flex-col justify-end"
            >
              <p
                class="text-sm font-normal leading-5 text-muted mb-2 whitespace-pre-line"
              >
                This card has an image with text overlay but no button.
              </p>
              <h3
                class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] text-card mb-4"
              >
                Text Only Card
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard stories snapshot > WithoutImage story renders and matches snapshot 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui relative h-full overflow-hidden ring-secondary/40 bg-muted/50"
    data-slot="card"
  />
</div>
`;
